[gd_scene load_steps=7 format=3 uid="uid://cgld1r4lin214"]

[ext_resource type="Texture2D" uid="uid://dojgprupglvsy" path="res://Assets/TileSets/Home Made Assets/Museum.png" id="2_rfgje"]
[ext_resource type="Script" uid="uid://bp4ksamucxj6e" path="res://Scripts/Buildings/StartingArea/HouseRoof.gd" id="2_vdf1l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdf1l"]
size = Vector2(51, 67.9375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfgje"]
size = Vector2(51, 67.9375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qiqtb"]
size = Vector2(27.75, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnxvr"]
size = Vector2(134.5, 87)

[node name="TownMuseum" type="Node2D" groups=["houses"]]

[node name="HouseBase" type="Node2D" parent="."]
z_index = -1

[node name="BaseSprite" type="Sprite2D" parent="HouseBase"]
position = Vector2(-3, -70)
texture = ExtResource("2_rfgje")
centered = false
region_enabled = true
region_rect = Rect2(37, 91, 134, 73)

[node name="StaticBody2D" type="StaticBody2D" parent="HouseBase"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBase/StaticBody2D"]
position = Vector2(103.5, -35.96875)
shape = SubResource("RectangleShape2D_vdf1l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HouseBase/StaticBody2D"]
position = Vector2(24.5, -35.96875)
shape = SubResource("RectangleShape2D_rfgje")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HouseBase/StaticBody2D"]
position = Vector2(64.125, -51.5)
shape = SubResource("RectangleShape2D_qiqtb")

[node name="HouseRoof" type="Node2D" parent="."]
script = ExtResource("2_vdf1l")

[node name="RoofSprite" type="Sprite2D" parent="HouseRoof"]
position = Vector2(-3, -152)
texture = ExtResource("2_rfgje")
centered = false
region_enabled = true
region_rect = Rect2(37, 9, 134, 82)

[node name="RoofTrigger" type="Area2D" parent="HouseRoof"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseRoof/RoofTrigger"]
position = Vector2(63.75, -113.5)
shape = SubResource("RectangleShape2D_bnxvr")
